<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_files_list_open_file"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_files_list_open_file"
        />
    <TextView
        android:id="@+id/dialog_files_list_open_with"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_files_list_open_with"
        />
    <TextView
        android:id="@+id/dialog_files_list_share_with"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_files_list_share_file"
        />
    <TextView
        android:id="@+id/dialog_files_list_delete_file"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_files_list_delete_file"
        />

</LinearLayout>